--- a/project2/index.html
+++ b/project2/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Midterm Question 2</title>
+  <title>Demo of Using Github Serving</title>
   <style>
     body {
       padding: 0;
@@ -15,7 +15,7 @@
   <script srx="text/javascript"></script>
   <script src="libraries/p5.sound.js"></script>
 
-  <script src="question1.js"></script>
+  <script src="sketch.js"></script>
 </head>
 
 <body>
